--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
     "test": "snyk test"
   },
   "dependencies": {
-    "adm-zip": "0.4.11",
-    "body-parser": "1.9.0",
+    "adm-zip": "^0.5.2",
+    "body-parser": "^1.18.2",
     "cfenv": "^1.0.4",
     "consolidate": "0.14.5",
     "cookie-parser": "1.3.3",
     "dustjs-helpers": "1.5.0",
-    "dustjs-linkedin": "2.5.0",
+    "dustjs-linkedin": "^2.7.5",
     "ejs": "1.0.0",
     "ejs-locals": "1.0.2",
-    "errorhandler": "1.2.0",
-    "express": "4.12.4",
+    "errorhandler": "^1.4.3",
+    "express": "^4.16.0",
     "express-fileupload": "0.0.5",
     "file-type": "^8.1.0",
     "humanize-ms": "1.0.1",
     "jquery": "^2.2.4",
-    "lodash": "4.17.4",
+    "lodash": "^4.17.21",
     "marked": "0.3.5",
     "method-override": "latest",
-    "moment": "2.15.1",
+    "moment": "^2.19.3",
     "mongodb": "^3.5.9",
     "mongoose": "4.2.4",
     "morgan": "latest",
